--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-hacker
-title: Devil's Staircase || The new `#ProfilePicture`
+title: Devil's Staircase
+description: The new `#ProfilePicture` for @itsN1X twitter.
